# HourglassExchange

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  README_CN.md  config.toml  rustfmt.toml
examples/: CH_create_unioned_tables_between_dates_binance.rs  CH_create_unioned_tables_between_dates_binance_v2.rs  CH_create_unioned_tables_for_dates_binance.rs  CH_create_users_database.rs  CH_dates_missing.rs  CH_delete_all_non_union_tables.rs  CH_delete_all_union.rs  CH_delete_all_union_tables_between_dates.rs  CH_insert_between_dates.rs  CH_optimise_union_table_between_dates.rs  CH_query_by_row.rs  CH_query_push_by_row.rs  CH_query_table.rs  CH_query_union_by_row.rs  CH_query_union_table.rs  CH_replacing_engines.rs  Execution_Test_v1.rs  Super_Test_v1.rs  backtest_example.rs  create_union_tables_binance.rs  delete_all_union.rs  historical_batch_processing.rs  historical_cursor_stream.rs  historical_stream.rs  historical_stream_designed.rs  historical_stream_for_dates.rs  historical_stream_hardcoded.rs  lark_test.rs  live_stream.rs  query_push_by_row.rs  query_table.rs  test.rs  token_list.rs  warp_hyper_mwe.rs  warp_hyper_respond_and_shutdown.rs  warp_shutdown.rs
sql_examples/: aggregation_sec_level.sql  create_aggregated_snapshot_v1.sql  create_aggregated_snapshot_v2.sql  create_aggregated_trade.sql  mwe.sql
sql_prototypes/: create_aggregated_snapshot.sql  create_aggregated_trade.sql  join_trade_and_snapshot.sql  mwe.sql
src/: error.rs  lib.rs  network.rs  test_util.rs  test_utils.rs
src/accountant/: mod.rs  welford_online.rs
src/common/: balance.rs  event.rs  friction.rs  mod.rs  stable_token.rs  status.rs  token.rs  token_list.rs  trade.rs
src/common/account_positions/: closed.rs  closed_positions.rs  exited_position.rs  exited_positions.rs  future.rs  leveraged_token.rs  mod.rs  option.rs  perpetual.rs  position_delta.rs  position_id.rs  position_meta.rs
src/common/datafeed/: market_event.rs
src/common/instrument/: kind.rs  mod.rs
src/common/order/: mod.rs  order_instructions.rs
src/common/position/: future.rs  leveraged_token.rs  mod.rs  option.rs  perpetual.rs  position_id.rs  position_meta.rs
src/common_infrastructure/: balance.rs  event.rs  friction.rs  mod.rs  order.rs  token.rs  trade.rs
src/common_infrastructure/datafeed/: event.rs  historical.rs  live.rs  market_event.rs  mod.rs  public_event.rs
src/common_infrastructure/instrument/: kind.rs  mod.rs
src/common_infrastructure/order/: mod.rs  order_instructions.rs
src/common_infrastructure/position/: future.rs  leveraged_token.rs  mod.rs  option.rs  perpetual.rs  (+1 more)
src/common_skeleton/: balance.rs  event.rs  friction.rs  mod.rs  order.rs  position.rs  status.rs  token.rs  trade.rs
src/dashboard/: dispersion.rs  mod.rs  welford_online.rs
src/data_subscriber/: connector.rs  mapper.rs  mod.rs  socket_error.rs  subscriber.rs  validator.rs  websocket.rs
src/hourglass/: config_request.rs  hourglass_client.rs  hourglass_client_local_mode.rs  instrument_orders.rs  mod.rs  open_orders_book.rs  ws_trade.rs
src/hourglass_log/: mod.rs
src/model/: balance.rs  mod.rs  order.rs  trade.rs
src/network/: event.rs  mod.rs
src/sandbox/: config_request.rs  instrument_orders.rs  mod.rs  sandbox_client.rs  ws_trade.rs
src/simulated/: account.rs  account_balances.rs  account_config.rs  account_orders.rs  exchange.rs  instrument_orders.rs  mod.rs  simulated_client.rs  simulated_exchange.rs  ws_trade.rs
src/simulated_exchange/: client.rs  instrument_orders.rs  mod.rs  simulated_client.rs  simulated_exchange.rs  ws_trade.rs
src/statistics/: dispersion.rs  error.rs  mod.rs  welford_online.rs
src/universal/: balance.rs  event.rs  event_and_status.rs  friction.rs  friction_:fees.rs  mod.rs  order.rs  position.rs  status.rs  symbol.rs  token.rs  trade.rs
src/vault/: error.rs  in_memory.rs  mod.rs  redis.rs  summariser.rs
tests/: simulated_exchange.rs  test_sandbox_v1.rs  test_set.rs
tests/util/: mod.rs  sample_trades.json  trade_jason_reader.rs
(+139 files in other folders)
