[package]
name = "unilink_execution"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging 日志
tracing = "0.1.36" # 高性能事件记录库，用于结构化日志和分布式跟踪

# Data Source 数据源
clickhouse = "0.12.0" # 用于连接和操作ClickHouse数据库的客户端库

# Random 随机数
rand_distr = "0.4.3" # 随机分布生成库，用于生成各种概率分布的随机数

# Async 异步
tokio = { version = "1.17.0", features = ["sync", "macros", "rt-multi-thread"] } # 异步运行时库，提供任务调度、多线程支持和异步I/O
futures = "0.3.21" # 用于异步编程的未来（Future）抽象和实用工具
async-trait = "0.1.57" # 用于在异步上下文中使用trait的库
async-stream = "0.3" # 提供异步流的宏和工具

# Error Handling 错误处理
thiserror = "1.0.32" # 用于定义自定义错误类型的简单易用的库

# Lazy Static 懒静态
lazy_static = "1.4.0" # 用于定义在首次使用时初始化的静态变量

# Once Cell 一次性初始化
once_cell = "1.7.2" # 提供线程安全的一次性初始化的工具

# Serialization/Deserialization 序列化/反序列化
serde = { version = "1.0.143", features = ["derive"] } # 强大的序列化和反序列化框架，支持多种数据格式

# Miscellaneous 杂项
uuid = { version = "1.8.0", features = ["v4", "serde"] } # 用于生成和解析UUID，支持序列化和反序列化
chrono = { version = "0.4.22", features = ["serde"] } # 日期和时间库，支持序列化和反序列化
num-traits = "0.2.15" # 提供数值类型的各种实用工具和特性
rand = "0.8.5" # 随机数生成库
rust_decimal = "1.35.0" # 提供精确的十进制数处理
regex = { version = "1.10.0", features = ["unicode-perl"] } # 正则表达式库，支持Unicode和Perl风格的正则表达式
futures-core = "0.3.30" # 核心异步编程工具库，提供Future和Stream的基础定义
pin-utils = "0.1.0"
futures-util = "0.3.30" # 用于处理Pin的实用工具库
